[package]
name = "meme_cache"
version = "0.1.2"
edition = "2021"
authors = ["Jude Giordano"]
repository = "https://github.com/judegiordano/meme-cache"
homepage = "https://github.com/judegiordano/meme-cache"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/judegiordano/meme-cache"
description = "Async Key:Value Global Cache"
publish = true
rust-version = "1.79"

[profile.test]
opt-level = 3

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = ">=1.0.*", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"

[dev-dependencies]
nanoid = "0.4.0"
rand = "0.8.5"
